fix #436 (#441)